<resources>
    <string name="app_name">GroupChatApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_account">Yeni Hesap Oluştur</string>
    <string name="register">Kayıt Ol</string>
    <string name="mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="or">Ya Da</string>
    <string name="login">Giriş Yap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Drawer Ac</string>
    <string name="close_nav">Drawer Kapat</string>
    <string name="create_group">Grup Oluştur</string>
    <string name="group_name">Grup Adı</string>
    <string name="group_icon">Grup Simgesi</string>
    <string name="choose_img">Fotoğraf Seçin</string>
    <string name="group_description">Grup Açıklaması</string>
    <string name="my_info">Ömer Faruk İnal - 201913709009</string>
    <string name="add_member_to_group">Gruba Üye Ekle</string>
    <string name="groups">Gruplar</string>
    <string name="selected_group">Seçili Grup</string>
    <string name="create_message">Mesaj Oluştur</string>
    <string name="message_title">Mesaj Başlığı</string>
    <string name="message_content">Mesaj İçeriği</string>
    <string name="send_message">Mesaj Gönder</string>
    <string name="selected_message">Seçili Mesaj</string>
</resources>